--- a/ducttape_native/Cargo.toml
+++ b/ducttape_native/Cargo.toml
@@ -14,3 +14,4 @@ ducttape-item-engine = { version = "0.1.0", path = "../ducttape-item-engine" }
 godot = "0.2.3"
 uuid = { version = "1.12.1", features = ["v4"] }
 valence_text = "0.2.0-alpha.1"
+lazy_static = "1.5.0"
