--- a/ducttape_native/Cargo.toml
+++ b/ducttape_native/Cargo.toml
@@ -12,9 +12,11 @@ bevy = { version = "0.15.3", default-features = false, features = [
     "bevy_asset",
     "bevy_state",
 ] }
-clap = { version = "4.5.29", features = ["derive"] }
 ducttape-item-engine = { version = "0.1.0", path = "../ducttape-item-engine" }
 godot = "0.2.3"
 uuid = { version = "1.12.1", features = ["v4"] }
 valence_text = "0.2.0-alpha.1"
 lazy_static = "1.5.0"
+zbus = { version = "5.5.0" }
+paste = "1.0.15"
+serde = { version = "1.0.218", features = ["derive"] }
