--- a/ducttape-godot/assets/item/spear/template.toml
+++ b/ducttape-godot/assets/item/spear/template.toml
@@ -1,9 +1,3 @@
-# The folder where the asset is located
-# this is relative to the template.toml file, so it is usually "."
-# from this folder we will load template.png, and then will load each
-# `${component}:${item}.png` file
-# where: component is the key in the components table, and item is the identifier of the item 
-asset_folder = "."
 # The data name of the item, for usage in the internal item registry
 # this is distinct from the item identifier, because compound items like this one
 # will have multiple instances depending on the components, but they will all share the same data_name
@@ -89,7 +83,7 @@ shaft = "#00ff00"
 
 [fallback]
 # The stick texture is a reasonable fallback for the shaft component
-tip = "stick" # tip:stick.png
+shaft = "stick" # tip:stick.png
 # Any fallback for the tip component isn't ideal, as it is the most important part of the item visually and functionally
 # but stone will do i guess
-shaft = "stone" # shaft:stone.png
+tip = "stone" # shaft:stone.png
