--- a/ducttape-item-engine/Cargo.toml
+++ b/ducttape-item-engine/Cargo.toml
@@ -20,3 +20,4 @@ uuid = { version = "1.12.1", features = ["fast-rng", "v4"] }
 valence_text = "0.2.0-alpha.1"
 image = { version = "0.25.5", default-features = false, features = ["rayon", "png"] }
 dyn-clone = "1.0.18"
+lazy_static = "1.5.0"
